<resources>
    <string name="app_name">On Time</string>

    //login
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="loginText">Login</string>
    <string name="signupText">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Setting</string>
    <string name="action_logout_text">Logout</string>
    <string name="creat_account_text">Create a new Account</string>
    <string name="signupTextP2">Register Account</string>
    <string name="loginButton2">Already have an Account?</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="setup_button_text">Save Account Setting</string>
    <string name="title_activity_admin3">Admin3Activity</string>
    <string name="title_notification">Notification</string>
    <string name="title_orders_list">Orders</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_maps">Map</string>
    <string name="login_txt_view">Login</string>
    <string name="new_order">New Order</string>
    <string name="my_orders">My Orders</string>
    <string name="customer_name_hint">Customer Name</string>
    <string name="customer_number">Customer Number</string>
    <string name="order_price">Order Price</string>
    <string name="location">Location</string>
    <string name="send_order">Send Order</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="_7_minute">7 minute</string>
    <string name="new_order_">New Order:</string>
    <string name="clarify_cancellation_reason_please">Clarify Cancellation Reason please:</string>
    <string name="to_restaurant">To Restaurant</string>
    <string name="at_restaurant">At Restaurant</string>
    <string name="to_customer">To Customer</string>
    <string name="at_customer">At Customer</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="register_new_account">Register New Account</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="number_of_orders">Number Of Orders</string>
    <string name="total_deleviry_revenue">Total Deleviry Revenue</string>
    <string name="logout">Logout</string>
    <string name="available">Available</string>
    <string name="busy">Busy</string>
    <string name="off_work">Off Work</string>
    <string name="captain">Captain</string>
    <string name="number">Number: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="name1">Name: %1$s</string>
    <string name="password">Password: %1$s</string>
    <string name="SR">%1$s &#160;  %2$s   &#160; %3$s SR</string>
    <string name="captain1">Captain %1$s</string>
    <string name="waitingforcaptain">Waiting for Captain %1$s To Accept The Order</string>
    <string name="manageaccounts">Manage Accounts</string>
    <string name="dataisupdated">Data is updated</string>
    <string name="passwordandconfirmp">Password and Confirm Password doesn\'t match</string>
    <string name="choes_account_type">Please choose account type</string>
    <string name="account_rigistered_successfully">%1$s Account Registered Successfully</string>
    <string name="complete_all_boxes">Please complete all boxes</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="did_you_deliver_the_order">Did you deliver the order</string>
    <string name="restaurant_name">Restaurant Name: </string>
    <string name="customer_name">Customer Name: </string>
    <string name="customer_number1">Customer Number: </string>
    <string name="order_cost">Order Cost: </string>
    <string name="customer_location">Customer Location: </string>
    <string name="cancel">Cancel</string>
    <string name="order_info">Order Information</string>
    <string name="check_logout">Are you sure you want to log out?</string>
    <string name="restarant">%1$s Restaurant</string>


</resources>
